--- a/network/project4/network/templates/network/index.html
+++ b/network/project4/network/templates/network/index.html
@@ -23,5 +23,37 @@
 
 {% endfor %}
 
+{% if posts.has_other_pages %}
+<ul>
+{% if posts.has_previous %}
+<!-- Left -->
+<li><a href="?page={{posts.previous_page_number}}"><</a></li>
+{% endif %}
+
+{% for i in posts.paginator.page_range %}
+
+{% if posts.number == i %}
+
+<li><p>{{i}}</p></li>
+
+{% else %}
+<li>
+<a href="?page={{i}}">{{i}}</a>
+</li>
+{% endif %}
+
+
+
+{% endfor %}
+
+{% if posts.has_next %}
+<li>
+<a href="?page={{posts.next_page_number}}">></a>
+</li>
+{% endif %}
+
+</ul>
+{% endif %}
+
 
 {% endblock %}
