--- a/network/project4/network/templates/network/index.html
+++ b/network/project4/network/templates/network/index.html
@@ -15,7 +15,7 @@
 
 {% for post in posts %}
 <div class="post">
-    <h2>{{post.creator}}</h2>
+    <a href = "/profile/?username={{post.creator}}"><h2>{{post.creator}}</h2></a>
     <p>{{post.content}}</p>
     <p>{{post.created_at}}</p>
     <p>{{post.likes}}</p>
