--- a/network/project4/network/templates/network/layout.html
+++ b/network/project4/network/templates/network/layout.html
@@ -13,6 +13,7 @@
             <a class="navbar-brand" href="#">Network</a>
           
             <div>
+    
               <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
@@ -40,8 +41,37 @@
               </ul>
             </div>
           </nav>
-        
-        <div class="body">
+
+          <div class="card custom-card">
+            <div class="card-body">
+                <h5 class="card-title">James</h5>
+                <p class="card-text">I went swimming today at the beach!</p>
+                <p class="card-text">6:30 am</p>
+                <p class="card-text">Sept. 2, 2020</p>
+                <a href="#" class="btn btn-primary">View Profile</a>
+            </div>
+        </div>
+          
+        <div class="card custom-card">
+            <div class="card-body">
+                <h5 class="card-title">James</h5>
+                <p class="card-text">I went swimming today at the beach!</p>
+                <p class="card-text">6:30 am</p>
+                <p class="card-text">Sept. 2, 2020</p>
+                <a href="#" class="btn btn-primary">View Profile</a>
+            </div>
+        </div>
+          
+        <div class="card custom-card">
+            <div class="card-body">
+                <h5 class="card-title">James</h5>
+                <p class="card-text">I went swimming today at the beach!</p>
+                <p class="card-text">6:30 am</p>
+                <p class="card-text">Sept. 2, 2020</p>
+                <a href="#" class="btn btn-primary">View Profile</a>
+            </div>
+        </div>
+
             {% block body %}
             {% endblock %}
         </div>
