--- a/network/project4/network/templates/network/index.html
+++ b/network/project4/network/templates/network/index.html
@@ -1,48 +1,61 @@
 {% extends "network/layout.html" %} {% block body %}
-<!-- user.is_authenticated -->
 
-{% if user.is_authenticated %}
+<div class="container">
+    {% if user.is_authenticated %}
 
-<form action="/" method="post">
-    {% csrf_token %} {{form}}
-    <button type="submit">Post!</button>
-</form>
+    <form action="/" method="post">
+        {% csrf_token %}
+        {% load widget_tweaks%}
 
-{% endif %} {% for post in posts %}
-<div class="post">
-    <a href="/profile/?username={{post.creator}}">
-        <h2>{{post.creator}}</h2>
-    </a>
-    <p>{{post.content}}</p>
-    <textarea hidden name="" id="{{post.id}}" cols="30" rows="10"></textarea>
-    <p>{{post.created_at}}</p>
-    <p>{{post.likes}}</p>
-    <button onclick="handle({{post.id}})">edit</button>
-</div>
+        {% for field in form %}
 
-{% endfor %} {% if posts.has_other_pages %}
-<ul>
-    {% if posts.has_previous %}
-    <!-- Left -->
-    <li>
-        <a href="?page={{posts.previous_page_number}}">
-            <</a>
-    </li>
-    {% endif %} {% for i in posts.paginator.page_range %} {% if posts.number == i %}
+        {% render_field field class+="input-box" %}
 
-    <li>
-        <p>{{i}}</p>
-    </li>
+        {% endfor %}
+        <button type="submit">Post!</button>
+    </form>
 
-    {% else %}
-    <li>
-        <a href="?page={{i}}">{{i}}</a>
-    </li>
-    {% endif %} {% endfor %} {% if posts.has_next %}
-    <li>
-        <a href="?page={{posts.next_page_number}}">></a>
-    </li>
     {% endif %}
 
-</ul>
-{% endif %} {% endblock %}
+    {% for post in posts %}
+    <div class="card text-center custom-card mx-auto">
+        <div class="card-body">
+            <a href="/profile/?username={{post.creator}}">
+                <h5 class="card-title">{{post.creator}}</h5>
+            </a>
+            <p class="card-text">{{post.content}}</p>
+            <textarea hidden name="" id="{{post.id}}" cols="30" rows="10"></textarea>
+            <p class="card-text">{{post.created_at}}</p>
+            <p class="card-text">{{post.likes}}</p>
+            <button onclick="handle({{post.id}})">edit</button>
+        </div>
+        </div>
+
+        {% endfor %} {% if posts.has_other_pages %}
+        <ul>
+            {% if posts.has_previous %}
+            <!-- Left -->
+            <li>
+                <a href="?page={{posts.previous_page_number}}">
+                    << /a>
+            </li>
+            {% endif %} {% for i in posts.paginator.page_range %} {% if posts.number == i %}
+
+            <li>
+                <p>{{i}}</p>
+            </li>
+
+            {% else %}
+            <li>
+                <a href="?page={{i}}">{{i}}</a>
+            </li>
+            {% endif %} {% endfor %} {% if posts.has_next %}
+            <li>
+                <a href="?page={{posts.next_page_number}}">></a>
+            </li>
+            {% endif %}
+
+        </ul>
+        {% endif %}
+    </div>
+    {% endblock %}
