--- a/network/project4/network/templates/network/index.html
+++ b/network/project4/network/templates/network/index.html
@@ -1,6 +1,6 @@
 {% extends "network/layout.html" %} {% block body %}
-{% load static %}  
-    <script src="{% static 'network/script.js' %}" type="text/javascript"></script>  
+{% load static %}
+<script src="{% static 'network/script.js' %}" type="text/javascript"></script>
 <div class="container">
     {% if user.is_authenticated %}
 
@@ -19,7 +19,7 @@
     {% endif %}
 
     {% for post in posts %}
-    <div class="card text-center custom-card mx-auto">
+    <div class="card text-center custom-card mx-auto mt-3">
         <div class="card-body">
             <a href="/profile/?username={{post.creator}}">
                 <h5 class="card-title">{{post.creator}}</h5>
@@ -31,34 +31,42 @@
             <button onclick="handleLike({{post.id}})">Like</button>
 
         </div>
-        </div>
-
-        {% endfor %} {% if posts.has_other_pages %}
-        <ul>
-            {% if posts.has_previous %}
-            <!-- Left -->
-            <li>
-                <a href="?page={{posts.previous_page_number}}">
-                    << /a>
-            </li>
-            {% endif %} {% for i in posts.paginator.page_range %} {% if posts.number == i %}
-
-            <li>
-                <p>{{i}}</p>
-            </li>
-
-            {% else %}
-            <li>
-                <a href="?page={{i}}">{{i}}</a>
-            </li>
-            {% endif %} {% endfor %} {% if posts.has_next %}
-            <li>
-                <a href="?page={{posts.next_page_number}}">></a>
-            </li>
-            {% endif %}
-
-        </ul>
-        {% endif %}
     </div>
-    {% endblock %}
 
+    {% endfor %} 
+    
+    <div class="custom-card text-center mx-auto mt-5">
+    {% if posts.has_other_pages %}
+    <ul class="pagination">
+        {% if posts.has_previous %}
+        <!-- Left -->
+        <li  class="page-item">
+            <a class="page-link" href="?page={{posts.previous_page_number}}">
+                <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+            </a>
+        </li>
+        {% endif %} {% for i in posts.paginator.page_range %} {% if posts.number == i %}
+
+        <li  class="page-item active">
+            <p class="page-link">{{i}}</p>
+        </li>
+
+        {% else %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{i}}">{{i}}</a>
+        </li>
+        {% endif %} {% endfor %} {% if posts.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{posts.next_page_number}}">
+                <span aria-hidden="true">&raquo;</span>
+        <span class="sr-only">Next</span>
+            </a>
+        </li>
+        {% endif %}
+
+    </ul>
+</div>
+    {% endif %}
+</div>
+{% endblock %}
