--- a/network/project4/network/templates/network/login.html
+++ b/network/project4/network/templates/network/login.html
@@ -10,13 +10,14 @@
             <form action="{% url 'login' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+                    <input required autofocus class="form-control" type="text" name="username" placeholder="Username">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="password" placeholder="Password">
+                    <input required class="form-control" type="password" name="password" placeholder="Password">
                 </div>
                 <input class="btn btn-primary" type="submit" value="Login">
             </form>
+            <p>Don't have an account? Register<a href="/register"> here</a></p>
             
 
         </div>
