--- a/network/project4/network/templates/network/register.html
+++ b/network/project4/network/templates/network/register.html
@@ -14,16 +14,16 @@
             <form action="{% url 'register' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    <input class="form-control" autofocus type="text" name="username" placeholder="Username">
+                    <input class="form-control" autofocus type="text" name="username" placeholder="Username"  required>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="email" name="email" placeholder="Email Address">
+                    <input class="form-control" type="email" name="email" placeholder="Email Address" required>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="password" placeholder="Password">
+                    <input class="form-control" type="password" name="password" placeholder="Password" required>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+                    <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password" required>
                 </div>
                 <button class="btn btn-primary align-items-center" type="submit">Register</button>
                 <p>Already have an account? <a href="{% url 'login' %}">Log In here.</a></p>
