--- a/network/project4/network/templates/network/follow.html
+++ b/network/project4/network/templates/network/follow.html
@@ -5,6 +5,81 @@ Following
 {% endblock %}
 
 {% block body %}
+{% load static %}
+<script src="{% static 'network/script.js' %}" type="text/javascript"></script>
+{% for post in posts %}
+<div class="card text-center custom-card mx-auto mt-3">
+    <div class="card-body" id={{post.id}}>
+        <a href="/profile/?username={{post.creator}}">
+            <h5 class="card-title">{{post.creator}}</h5>
+        </a>
+        <p class="card-text">{{post.content}}</p>
+        <textarea hidden name="" id="{{post.id}}" cols="30" rows="10"></textarea>
+        <p class="card-text">{{post.created_at}}</p>
+        <p class="card-text" id="like-{{post.id}}">{{post.likes}}</p>
+
+        <!-- Like button -->
+        {% if request.user.is_authenticated %}
+        {% if post.creator != request.user %}
+
+        <!-- Like -->
+        <svg onclick="handleLike({{post.id}})" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart svg-btn"
+            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+                d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
+        </svg>
+
+        <!-- Disklike  -->
+        <svg style="display: none" onclick="handleDisLike({{post.id}})" width="1em" height="1em" viewBox="0 0 16 16"
+            class="bi bi-heart-fill svg-btn" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+        </svg>
+        {% endif %}
 
 
+
+        {% endif %}
+
+
+    </div>
+</div>
+{% endfor %}
+<!-- Pagination -->
+<div class="custom-card text-center mx-auto mt-5">
+    {% if posts.has_other_pages %}
+    <ul class="pagination">
+        {% if posts.has_previous %}
+        <!-- Left -->
+        <li class="page-item">
+            <a class="page-link" href="?page={{posts.previous_page_number}}">
+                <span aria-hidden="true">&laquo;</span>
+                <span class="sr-only">Previous</span>
+            </a>
+        </li>
+        {% endif %} {% for i in posts.paginator.page_range %}
+
+        {% if posts.number == i %}
+
+        <li class="page-item active">
+            <p class="page-link">{{i}}</p>
+        </li>
+
+        {% else %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{i}}">{{i}}</a>
+        </li>
+        {% endif %}
+        {% endfor %}
+        {% if posts.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{posts.next_page_number}}">
+                <span aria-hidden="true">&raquo;</span>
+                <span class="sr-only">Next</span>
+            </a>
+        </li>
+        {% endif %}
+
+    </ul>
+    {% endif %}
+</div>
 {% endblock %}
