--- a/network/project4/network/static/network/styles.css
+++ b/network/project4/network/static/network/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: burlywood;
+  background-color: aliceblue;
   font-family: "Montserrat", sans-serif;
   min-height: 100vh;
   display: grid;
