Change username to id

--- a/network/project4/network/templates/network/follow.html
+++ b/network/project4/network/templates/network/follow.html
@@ -11,7 +11,7 @@ Following
     <div class="card text-center custom-card mx-auto mt-3">
         <div class="card-body" id={{post.id}}>
 
-            <a href="/profile/?username={{post.creator}}">
+            <a href="/profile/?id={{post.creator.id}}">
                 <h5 class="card-title">{{post.creator}}</h5>
             </a>
 
