--- a/network/project4/network/templates/network/index.html
+++ b/network/project4/network/templates/network/index.html
@@ -26,7 +26,7 @@
     <div class="card text-center custom-card mx-auto mt-3">
         <div class="card-body" id={{post.id}}>
 
-            <a href="/profile/?username={{post.creator}}">
+            <a href="/profile/?id={{post.creator.id}}">
                 <h5 class="card-title">{{post.creator}}</h5>
             </a>
 
