--- a/network/project4/network/templates/network/layout.html
+++ b/network/project4/network/templates/network/layout.html
@@ -22,7 +22,7 @@
                 {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link"
-                        href="/profile/?username={{user.username}}"><strong>{{ user.username }}</strong></a>
+                        href="/profile/?id={{user.id}}"><strong>{{ user.username }}</strong></a>
                 </li>
                 {% endif %}
                 <li class="nav-item">
