--- a/network/project4/network/templates/network/profile.html
+++ b/network/project4/network/templates/network/profile.html
@@ -9,18 +9,18 @@
             <span id="followers">{{followers}}</span>
         </p>
         <!-- Follow unfollow buttons -->
-        {% if request.user.is_authenticated and request.user.username != user1.username%}
+        {% if request.user.is_authenticated and request.user.id != user1.id%}
         {% if isFollowing %}
         <button class="btn btn-primary profileBTN" id="follow" style="display: none;"
-            onclick="handleFollow('{{user1.username}}')">Follow</button>
+            onclick="handleFollow('{{user1.id}}')">Follow</button>
 
-        <button class="btn btn-primary profileBTN" id="unfollow" onclick="handleUnFollow('{{user1.username}}')">UnFollow</button>
+        <button class="btn btn-primary profileBTN" id="unfollow" onclick="handleUnFollow('{{user1.id}}')">UnFollow</button>
         {% else %}
 
         <button class="btn btn-primary profileBTN" id="unfollow" style="display: none;"
-            onclick="handleUnFollow('{{user1.username}}')">UnFollow</button>
+            onclick="handleUnFollow('{{user1.id}}')">UnFollow</button>
 
-        <button class="btn btn-primary profileBTN" id="follow" onclick="handleFollow('{{user1.username}}')">Follow</button>
+        <button class="btn btn-primary profileBTN" id="follow" onclick="handleFollow('{{user1.id}}')">Follow</button>
 
         {% endif %}
 
@@ -33,7 +33,7 @@
     <div class="card text-center custom-card mx-auto mt-3">
         <div class="card-body" id={{post.id}}>
 
-            <a href="/profile/?username={{post.creator}}">
+            <a href="/profile/?id={{post.creator.id}}">
                 <h5 class="card-title">{{post.creator}}</h5>
             </a>
 
@@ -93,7 +93,7 @@
             {% if posts.has_previous %}
             <!-- Left -->
             <li class="page-item">
-                <a class="page-link" href="?username={{user1.username}}&page={{posts.previous_page_number}}">
+                <a class="page-link" href="?id={{user1.id}}&page={{posts.previous_page_number}}">
                     <span aria-hidden="true">&laquo;</span>
                     <span class="sr-only">Previous</span>
                 </a>
@@ -108,13 +108,13 @@
 
             {% else %}
             <li class="page-item">
-                <a class="page-link" href="?username={{user1.username}}&page={{i}}">{{i}}</a>
+                <a class="page-link" href="?id={{user1.id}}&page={{i}}">{{i}}</a>
             </li>
             {% endif %}
             {% endfor %}
             {% if posts.has_next %}
             <li class="page-item">
-                <a class="page-link" href="?username={{user1.username}}&page={{posts.next_page_number}}">
+                <a class="page-link" href="?id={{user1.id}}&page={{posts.next_page_number}}">
                     <span aria-hidden="true">&raquo;</span>
                     <span class="sr-only">Next</span>
                 </a>
@@ -125,7 +125,7 @@
         {% endif %}
     </div>
     {% else %}
-    <h1>Sorry Coiuld not find the user!</h1>
+    <h1>Sorry Could not find the user!</h1>
     {% endif %}
 </div>
 {% endblock %}
